--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,9 @@
         </div>
         <div class="container text-center mt-3">
             <h1>About Us</h1>
+            <p>Welcome to Pik&Go, where we believe in making every sip and experince to remember. At Pik&Go, we understand the simple joys of life, and we're here to amplify them through our refreshing sugracnane concoctions. 
+                Our meticilous selection of the freshest sugarcane and other ingredients ensure that each drop of juice embodies the pure goodness of nature's sweeteness, delivering a burst of flavor that invigorates your senses and leaves you craving more!             
+            </p>
             <ul>
             </ul>
         </div>
