static file nav bar changed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,7 +11,7 @@
 
 /* Navbar color */
 .navbar {
-    background-color: #e4f8ac; /* Change to your desired color */
+    background-color: #bff52c; /* Change to your desired color */
     /* Additional styles */
 }
 
@@ -60,7 +60,7 @@ h1, h2, h3, h4, p {
 
 /* Footer color */
 .footer {
-    background-color: #def8ac; /* Change to your desired color */
+    background-color: #bff52c; /* Change to your desired color */
     /* Additional styles */
 }
 
