--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 
 <body class="d-flex flex-column min-vh-100"> <!-- Change min-hv-100 to min-vh-100 -->
 <nav class="navbar navbar-expand-md navbar-light bg-light">
-    <a class="navbar-brand" href="{{ url_for('index')}}">
+    <a class="navbar-brand" href="{{ url_for('index')}}" colour="#bff52c">
         <img src="{{ url_for('static', filename='pik_n_go_logo.png') }}" alt="Pik&Go Logo" height="60"
              class="d-inline-block center-top">
         <!-- #MakeItBest -->
