--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -28,27 +28,31 @@
             <button type="submit" class="btn btn-primary bg-success">Submit</button>
         </form>
 
-        <!-- Display Existing Content -->
-        <h2>Existing Content:</h2>
-        {% for content in contents %}
-            <div class="card">
-                <div class="card-body">
-                    {% if content.image_filename %}
-                        <img src="{{ url_for('static', filename='uploads/' + content.image_filename) }}" alt="Post Image" class="img-fluid" style="max-width: 100px; max-height: 100px;">
-                    {% endif %}
-                    <h3 class="card-title">{{ content.title }}</h3>
-                    <p class="card-text">{{ content.body }}</p>
-                    <div class="author-info">
-                        <!-- p>Posted by: {{ content.author }}</p -->
-                    </div><!-- /.author-info -->
-                    <!-- Delete and Edit Buttons -->
-                    <a href="{{ url_for('edit_content', content_id=content.id) }}" class="btn btn-warning">Edit</a>
-                    <form method="post" action="{{ url_for('delete_content', content_id=content.id) }}" style="display: inline;">
-                        <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this post?')">Delete</button>
-                    </form>                    
+       <!-- Display Existing Content -->
+        <div class="post-content">
+            <h2>Existing Content:</h2>
+            {% for content in contents %}
+                <div class="card">
+                    <div class="card-body">
+                        {% if content.image_filename %}
+                            <img src="{{ url_for('static', filename='uploads/' + content.image_filename) }}" alt="Post Image" class="img-fluid" style="max-width: 100px; max-height: 100px;">
+                        {% endif %}
+                        <h3 class="card-title">{{ content.title }}</h3>
+                        <div class="body">
+                            <p>{{ content.body }}</p>
+                        </div>
+                        <div class="author-info">
+                            <!-- p>Posted by: {{ content.author }}</p -->
+                        </div><!-- /.author-info -->
+                        <!-- Delete and Edit Buttons -->
+                        <a href="{{ url_for('edit_content', content_id=content.id) }}" class="btn btn-warning">Edit</a>
+                        <form method="post" action="{{ url_for('delete_content', content_id=content.id) }}" style="display: inline;">
+                            <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this post?')">Delete</button>
+                        </form>                    
+                    </div>
                 </div>
-            </div>
-            <br>
-        {% endfor %}
-    </div>
+                <br>
+            {% endfor %}
+        </div>
+     </div>
 {% endblock %}
