--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -8,14 +8,14 @@
     <div class="container">
         <h1 class="mt-5">Admin Login</h1>
 
-        <!-- Display flashed messages -->
+        <!-- Flashed Messages -->
         {% for message in get_flashed_messages() %}
             <div class="alert alert-{{ message[1] }}" role="alert">
                 {{ message[0] }}
             </div>
         {% endfor %}
 
-        <!-- Admin login form -->
+        <!-- Admin Login Form -->
         <form method="post" action="{{ url_for('admin_login') }}" class="mt-4">
             <div class="form-group">
                 <label for="username">Username:</label>
