--- a/templates/post.html
+++ b/templates/post.html
@@ -8,7 +8,7 @@
     {% if post.image_filename %}
     <img src="{{ url_for('static', filename='uploads/' + post.image_filename) }}" alt="Post Image" class="img-fluid rounded float-left" style="max-width: 200px; max-height: 350px; margin-right: 20px;">
     {% endif %}
-    <p>{{ post.body }}</p>
+    <p>{{ post.body | safe }}</p>
 </div>
 
 <div>
